--- a/TnTComponents/Buttons/TnTButton.razor.scss
+++ b/TnTComponents/Buttons/TnTButton.razor.scss
@@ -204,5 +204,9 @@
         tnt-page-script {
             position: absolute;
         }
+
+        .tnt-icon {
+            pointer-events: none;
+        }
     }
 }
