--- a/TnTComponents/Buttons/TnTImageButton.razor.scss
+++ b/TnTComponents/Buttons/TnTImageButton.razor.scss
@@ -260,5 +260,9 @@
         tnt-page-script {
             position: absolute;
         }
+
+        .tnt-icon {
+            pointer-events: none;
+        }
     }
 }
