Enhance TnTSideNav and TnTSideNavLink components
- Updated padding in `TnTSideNav.razor.scss` from 16px to 20px.
- Refactored `TnTSideNavLink.cs` to a partial class and removed unused directives.
- Introduced `TnTSideNavLink.razor` for dynamic rendering using Razor syntax.
- Added `TnTSideNavLink.razor.cs` for component logic and parameter management.
- Created `TnTSideNavLink.razor.scss` for styling the navigation link.

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -20,42 +20,86 @@
         <h3>
             My First Headline
         </h3>
-        <TnTSideNavLink Label="Home" href="/" Match="NavLinkMatch.All" Disabled="true" />
-        <TnTSideNavLink Label="Accordion" href="/accordion" Icon="@MaterialIcon.MusicNote" />
-        <TnTSideNavLink Label="Anchors" href="/anchors" Icon="@MaterialIcon.Link" />
+        <TnTSideNavLink href="/" Match="NavLinkMatch.All" Disabled="true">
+            Home
+        </TnTSideNavLink>
+        <TnTSideNavLink href="/accordion" Icon="@MaterialIcon.MusicNote">
+            Accordion
+        </TnTSideNavLink>
+        <TnTSideNavLink href="/anchors" Icon="@MaterialIcon.Link">
+            Anchors
+        </TnTSideNavLink>
 
         <TnTSideNavMenuGroup Icon="@MaterialIcon.SmartButton" Label="Buttons">
-            <TnTSideNavLink Label="Buttons" href="/buttons" />
-            <TnTSideNavLink Label="Image Buttons" href="/imagebuttons" Icon="@MaterialIcon.MusicNote" />
-            <TnTSideNavLink Label="FABs" href="/fabbuttons" Icon="@MaterialIcon.Link" />
+            <TnTSideNavLink href="/buttons">
+                Buttons
+            </TnTSideNavLink>
+            <TnTSideNavLink href="/imagebuttons" Icon="@MaterialIcon.MusicNote">
+                Image Buttons
+            </TnTSideNavLink>
+            <TnTSideNavLink href="/fabbuttons" Icon="@MaterialIcon.Link">
+                FABs
+            </TnTSideNavLink>
         </TnTSideNavMenuGroup>
-        <TnTSideNavLink Label="Chips" href="/chips" Icon="@MaterialIcon.BedroomChild" />
-        <TnTSideNavLink Label="Dialogs" href="/dialog" Icon="@MaterialIcon.Diamond" />
+        <TnTSideNavLink href="/chips" Icon="@MaterialIcon.BedroomChild">
+            Chips
+        </TnTSideNavLink>
+        <TnTSideNavLink href="/dialog" Icon="@MaterialIcon.Diamond">
+            Dialogs
+        </TnTSideNavLink>
 
         <TnTSideNavMenuGroup Icon="@MaterialIcon.EditNote" ExpandByDefault="false" Label="Editors">
-            <TnTSideNavLink Label="Markdown Editor" href="/markdown" Icon="@MaterialIcon.MarkAsUnread" />
+            <TnTSideNavLink href="/markdown" Icon="@MaterialIcon.MarkAsUnread">
+                Markdown Editor
+            </TnTSideNavLink>
         </TnTSideNavMenuGroup>
 
-        <TnTSideNavLink Label="Forms" href="/forms" Icon="@MaterialIcon.FormatAlignCenter" />
+        <TnTSideNavLink href="/forms" Icon="@MaterialIcon.FormatAlignCenter">
+            Forms
+        </TnTSideNavLink>
 
         <TnTSideNavMenuGroup Icon="@MaterialIcon.Grid4X4" ExpandByDefault="false" Label="Grids">
-            <TnTSideNavLink Label="Grid" href="/datagrid" Icon="@MaterialIcon.GridView" />
-            <TnTSideNavLink Label="Paginated Grid" href="/paginated" Icon="@MaterialIcon.GridOn" />
-            <TnTSideNavLink Label="Virtualized Grid" href="/virtualizedGrid" Icon="@MaterialIcon.GridGoldenratio" />
+            <TnTSideNavLink href="/datagrid" Icon="@MaterialIcon.GridView">
+                Grid
+            </TnTSideNavLink>
+            <TnTSideNavLink href="/paginated" Icon="@MaterialIcon.GridOn">
+                Paginated Grid
+            </TnTSideNavLink>
+            <TnTSideNavLink href="/virtualizedGrid" Icon="@MaterialIcon.GridGoldenratio">
+                Virtualized Grid
+            </TnTSideNavLink>
         </TnTSideNavMenuGroup>
-        <TnTSideNavLink Label="Nested Layout" href="/nestedLayout" Icon="@MaterialIcon.NestCamWiredStand" />
-        <TnTSideNavLink Label="Progress" href="/progress" Icon="@MaterialIcon.Propane" />
+        <TnTSideNavLink href="/nestedLayout" Icon="@MaterialIcon.NestCamWiredStand">
+            Nested Layout
+        </TnTSideNavLink>
+        <TnTSideNavLink href="/progress" Icon="@MaterialIcon.Propane">
+            Progress
+        </TnTSideNavLink>
 
         <TnTSideNavMenuGroup Icon="@MaterialIcon.Schedule" ExpandByDefault="false" Label="Scheduler">
-            <TnTSideNavLink Label="Weekly Scheduler" href="/scheduler" Icon="@MaterialIcon.ViewWeek" />
+            <TnTSideNavLink href="/scheduler" Icon="@MaterialIcon.ViewWeek">
+                Weekly Scheduler
+            </TnTSideNavLink>
         </TnTSideNavMenuGroup>
 
-        <TnTSideNavLink Label="Skeleton" href="/skeleton" Icon="@MaterialIcon.ShoppingBasket" />
-        <TnTSideNavLink Label="TabView" href="/tabview" />
-        <TnTSideNavLink Label="Toast" href="/toast" />
-        <TnTSideNavLink Label="Typeahead" href="/typeahead" />
-        <TnTSideNavLink Label="Virtualize" href="/InfiniteScroll" Icon="@MaterialIcon.Info" />
-        <TnTSideNavLink Label="Wizard" href="/Wizard" Icon="@MaterialIcon.Image" />
+        <TnTSideNavLink href="/skeleton" Icon="@MaterialIcon.ShoppingBasket">
+            Skeleton
+        </TnTSideNavLink>
+        <TnTSideNavLink href="/tabview">
+            TabView
+        </TnTSideNavLink>
+        <TnTSideNavLink href="/toast">
+            Toast
+        </TnTSideNavLink>
+        <TnTSideNavLink href="/typeahead">
+            Typeahead
+        </TnTSideNavLink>
+        <TnTSideNavLink href="/InfiniteScroll" Icon="@MaterialIcon.Info">
+            Virtualize
+        </TnTSideNavLink>
+        <TnTSideNavLink href="/Wizard" Icon="@MaterialIcon.Image">
+            Wizard
+        </TnTSideNavLink>
     </TnTSideNav>
 
 </TnTLayout>
