Refactor Skeleton and Accordion components
- Updated `Skeleton.razor` to change `TnTSkeleton` appearance and background color.
- Removed `toggleAccordionHeader` from `TnTAccordion.razor.js` and refactored logic into `update` method.
- Modified `updateChild` function for better resizing and mutation handling.
- Changed `TnTAccordion.razor.scss` to use `@use` syntax for style imports.
- Updated `TnTAccordionChild.razor` to include new namespaces and interfaces.
- Converted `TnTAccordionChild.razor.cs` to a partial class and improved CSS class/style handling.

--- a/LiveTest/LiveTest.Client/Pages/Skeleton.razor
+++ b/LiveTest/LiveTest.Client/Pages/Skeleton.razor
@@ -4,12 +4,12 @@
 <h3>Skeleton</h3>
 
 
-<TnTSkeleton Appearance="SkeletonAppearance.Circle" />
-<TnTSkeleton BackgroundColor="TnTColor.Primary" />
+<TnTSkeleton Appearance="SkeletonAppearance.Round" />
+<TnTSkeleton BackgroundColor="TnTColor.Tertiary" AnimatedColor="@TnTColor.OnTertiary" />
 <TnTSkeleton style="width:20rem; height:2rem;" />
-<TnTSkeleton Animated="false" />
+<TnTSkeleton AnimatedColor="@null"/>
 
-<StreamedComponent/>
+@* <StreamedComponent /> *@
 
 @code {
 
