--- a/TnTComponents/Accordion/TnTAccordion.razor.scss
+++ b/TnTComponents/Accordion/TnTAccordion.razor.scss
@@ -1,4 +1,5 @@
-﻿@import "../Styles/_Variables/_colors.scss";
+﻿@use '../Styles/_Variables/_colors.scss' as colors;
+@use '../Styles/_Variables/_interactable.scss' as interactable;
 
 .tnt-accordion ::deep {
     display: block;
@@ -6,11 +7,13 @@
 
     .tnt-accordion-child {
         border-radius: inherit;
+        @include colors.tnt-default-background-colors;
+        @include colors.tnt-default-foreground-colors;
 
         & > h3:first-child {
             border-radius: inherit;
             user-select: none;
-            border-bottom: 1px solid $tnt-color-outline;
+            border-bottom: 1px solid colors.$tnt-color-outline;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -21,6 +24,10 @@
             z-index: 100;
             position: sticky;
             top: 0;
+            @include colors.tnt-default-background-colors;
+            @include colors.tnt-default-foreground-colors;
+            @include interactable.tnt-interactable;
+            @include interactable.tnt-disabled;
 
             .tnt-icon {
                 padding: 8px;
