Refactor TnT input components and update styles
- Change namespace for `TnTInputBase` to `TnTComponents`.
- Update method access modifiers to `protected` for extensibility.
- Modify CSS selectors for `-webkit-autofill` to use `::` syntax.
- Add new styles for `::-webkit-calendar-picker-indicator`.
- Introduce loop for transforming validation messages in SCSS.
- Update `TnTInputCurrency` to inherit from `TnTInputBase<decimal?>`.
- Remove `_value` property and use `_cultureInfo` for currency formatting.
- Remove `BindAfterFunc` and add `FormatValueAsString` method.
- Update `TnTInputText` to inherit from `TnTInputBase<string?>`.
- Change `TnTInputText` to a partial class and simplify parsing logic.

--- a/TnTComponents/Form/TnTInputBase.razor.scss
+++ b/TnTComponents/Form/TnTInputBase.razor.scss
@@ -78,12 +78,17 @@ $background-color: var(--tnt-input-background-color);
                 opacity: 0.5;
             }
 
-            &:-webkit-autofill,
-            &:-webkit-autofill:hover,
-            &:-webkit-autofill:focus,
-            &:-webkit-autofill:active {
+            &::-webkit-autofill,
+            &::-webkit-autofill:hover,
+            &::-webkit-autofill:focus,
+            &::-webkit-autofill:active {
                 -webkit-background-clip: text;
                 color: $text-color;
+            }
+
+            &::-webkit-calendar-picker-indicator {
+                border-radius: 50%;
+                background-color: color-mix(in srgb, #ffffff 50%, $background-color);
             }
         }
 
@@ -108,8 +113,13 @@ $background-color: var(--tnt-input-background-color);
             text-wrap: wrap;
             @include typescale.tnt-body-small;
         }
-    }
 
+        @for $i from 1 through 5 {
+            *:nth-child(#{$i} of .tnt-validation-message) {
+                transform: translateY(calc(12px * ($i - 1))) !important;
+            }
+        }
+    }
 
 
     .tnt-input-length {
