Add margin adjustments and error indication styles
- Added `margin-bottom: 18px` to `TnTInputBase.razor.scss` for improved spacing.
- Introduced `margin-bottom: 12px` in `TnTInputSwitch.razor.scss` to enhance layout.
- Added `&:after` pseudo-element with `$error-color` background in `TnTInputSwitch.razor.scss` for error state indication.

--- a/TnTComponents/Form/TnTInputBase.razor.scss
+++ b/TnTComponents/Form/TnTInputBase.razor.scss
@@ -19,6 +19,7 @@ $background-color: var(--tnt-input-background-color);
     cursor: text;
     color: $text-color;
     transition: 250ms ease-in-out;
+    margin-bottom: 18px;
 
     .tnt-label {
         position: absolute;
